// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> renders correctly if prop colorScheme="alert" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW cnmWeh"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="flatLight" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW dPYUUP"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="info" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW jwtqHv"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="link" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW lpsnAh"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="secondary" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW gxCrhL"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="success" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW xmcCk"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="warning" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW KxTqi"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop colorScheme="white" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW irWspr"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop disabled set true 1`] = `
<button
  className="ButtonStyled__Button-FHerW eTjvxx"
  disabled={true}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop icon="custom" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW hFuTfw"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonIconStyled__ButtonIconBoxStyled-hlFixJ kEAAOU"
    disabled={false}
    size="normal"
  >
    <div
      className="IconCustomStyled-ehOkKD diQUT"
      color=""
      rotate={0}
      size="normal"
      src="http://files.gamebanana.com/img/ico/sprays/51cb98f9d3747.png"
    />
  </div>
</button>
`;

exports[`<Button/> renders correctly if prop icon="svg" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW hFuTfw"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonIconStyled__ButtonIconBoxStyled-hlFixJ kEAAOU"
    disabled={false}
    size="normal"
  >
    <div
      className="IconSvgStyled-kZHpyB fZTytP"
      color=""
      rotate={0}
      size="normal"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <polygon
          points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if prop kind="primary" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW cnFWZl"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop narrow set 1`] = `
<button
  className="ButtonStyled__Button-FHerW hXnclN"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop radius="default" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW hFuTfw"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop radius="none" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW ixbZDt"
  disabled={false}
  onClick={[Function]}
  radius="none"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop radius="rounded" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW ioNkHt"
  disabled={false}
  onClick={[Function]}
  radius="rounded"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop raised set to true 1`] = `
<button
  className="ButtonStyled__Button-FHerW bDdqwh"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop size set inline 1`] = `
<button
  className="ButtonStyled__Button-FHerW bKobzY"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="inline"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop size set large 1`] = `
<button
  className="ButtonStyled__Button-FHerW jdMSbb"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="large"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop size set small 1`] = `
<button
  className="ButtonStyled__Button-FHerW fEqeGg"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="small"
  title=""
/>
`;

exports[`<Button/> renders correctly if prop text set 1`] = `
<button
  className="ButtonStyled__Button-FHerW dGLcIb"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if prop text="foo" set 1`] = `
<button
  className="ButtonStyled__Button-FHerW dGLcIb"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      foo
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if props narrow false and radius rounded 1`] = `
<button
  className="ButtonStyled__Button-FHerW divXMS"
  disabled={false}
  onClick={[Function]}
  radius="rounded"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly if props text and subtitle are set 1`] = `
<button
  className="ButtonStyled__Button-FHerW cTefDw"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
>
  <div
    className="ButtonTextStyled-kqmWUR foLdiD"
    size="normal"
  >
    <div
      className="ButtonSubtitleStyled-bFHACI laqQqJ"
      size="normal"
    >
      sup
    </div>
    <div
      className="ButtonTitleStyled-EwESb hkRlbG"
      size="normal"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<Button/> renders correctly with default props 1`] = `
<button
  className="ButtonStyled__Button-FHerW hFuTfw"
  disabled={false}
  onClick={[Function]}
  radius="default"
  size="normal"
  title=""
/>
`;
